force-app/main/default/objects/Product2/fields/Top_Speed_Km_h__c.field-meta.xml
<CustomField>
    <fullName>Top_Speed_Km_h__c</fullName>
    <label>Top Speed (Km/h)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>