force-app/main/default/objects/Product2/recordTypes/Sold.recordType-meta.xml
<RecordType>
    <fullName>Sold</fullName>
    <active>true</active>
    <label>Sold</label>
</RecordType>