force-app/main/default/objects/Product2/listViews/X1.listView-meta.xml
<ListView>
    <fullName>X1</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <columns>PRODUCT2.PRODUCT_CLASS</columns>
    <filterScope>Everything</filterScope>
    <label>1</label>
</ListView>